--- a/about.html
+++ b/about.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="style.css">
 <title>celine</title>
 </head>
-<body style="background-color:#AFEEEE;">
-<a href="home.html">This is an online shop</a>
-<h1 style="color:blue;text-align:center;border:2px solid Violet;">Welcome to celine's shop</h>
-<h2>Buy choclate fountain that abed doesn't want to buy for you</h2>
-<h3> chocolate fountain (1) </h3>
-<a href="https://www.bestbuy.ca/en-ca/product/nostalgia-cff986-4-tier-stainless-steel-chocolate-fondue-fountain/13339095"><img src="chocolate fountain.jpg.jpg" width="550" height="650">
-
-
+<h1 >Welcome to celine's shop</h>
+<h4>Buy the best cellphones ever </h4>
+<h2> IPHONE </h2>
+<a href="https://www.petcom.co.il/product/%D7%98%D7%9C%D7%A4%D7%95%D7%9F-%D7%A1%D7%9C%D7%95%D7%9C%D7%A8%D7%99-iphone-xr-64gb-apple-%D7%A6%D7%91%D7%A2-white/"><img src="iphone.png" width="550" height="650">
+<h3 class="sale">Price:$6.66</h3>
+<br><br>
+<h2> SAMSUNG </h2>
+<a href="https://www.samsung.com/sa_en/smartphones/galaxy-a70-a705/SM-A705FZKUKSA/"><img src="galaxy.jpg" width="950" height="650"></a>
+<h3 class="sale">Price:$7.89</h3>
 </body>
+<ul>
+  <li><a href="#home">Home</a></li>
+  <li><a href="#news">News</a></li>
+  <li><a href="#contact">Contact</a></li>
+  <li><a href="#about">About</a></li>
+</ul>
 </html>
