--- a/home.html
+++ b/home.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Youtube</title>
+<title>hiba</title>
 </head>
 <body>
 <a href="about.html">This is a link</a>
-<h1> Welcome to Youtube </h1>
+<h1>  </h1>
+
+
+
+
+
+
+
 </body>
 </html>
