--- a/project.html
+++ b/project.html
@@ -6,8 +6,13 @@
 <script src="js.js"></script>
 </head>
 <body style="background-image: url(cat.jpg)">
-<h1 id=header >fuzzy eats</h1>
+<h1 id=header >Oscar Eats</h1>
 <img style= weidth=250 height=200 >
-<a href="projct.html">start</a>
+<button onclick="celine()"type="button">start</button>
+<script>
+	function celine(){
+		window.location.href="projct.html"
+	}
+</script>
 </body>
 </html>
