--- a/projct.html
+++ b/projct.html
@@ -1,12 +1,19 @@
 <html>
 <head>
-	</head>
-<body style="background-color: lightblue">
-
-<p style="font-size: 30px; text-align: left;">you're a cat called fuzzy sleeping on the left side of the road, you see delicious food on the right side what should you do! </p>
-<img id="y" style= "width:300" "height:800" src= street.jpg>
-<button onclick =>risk your life and go eat it</button>
-	<button id="t" onclick=>stay sleeping and wait for your owner</button>
 <link rel="stylesheet" type="text/css" href="p.css">
 
-</body>
+	</head>
+<body style="background-image: url(street.jpg);">
+
+<p style="font-size: 30px; text-align: left;">you're a cat called Oscar sleeping on the left side of the road, you see delicious food on the right side what should you do! </p>
+<button onclick= "celine()"=>risk your life and go eat it</button>
+	<button id="t" onclick="d()"=>stay sleeping and wait for your owner</button>
+
+<script>
+	function celine(){
+		window.location.href="project1.html"
+	}
+	function d(){
+		window.location.href="owner.html"}
+</script>
+</body> 
